[package]
name = "mqtt-basic"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
paho-mqtt = { git = "https://github.com/eclipse/paho.mqtt.rust.git" }
pretty_env_logger = "0.5.0"
log = "0.4.0"
taos = "0.8.12"
