[package]
name = "mqtt-basic"
version = "0.1.3"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pretty_env_logger = "0.5.0"
log = "0.4.20"
taos = "0.10.13"
paho-mqtt = { version = "0.12.3", features = ["vendored-ssl"] }
